[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mvcc-transaction-manager"
version = "0.1.0"
description = "A from-scratch MVCC transaction manager implementing snapshot isolation and the standard SQL isolation levels."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Juan Martos Cuevas", email = "martoscuevasjuan@gmail.com" }]

[project.urls]
Repository = "https://github.com/juanmmm21/mvcc-transaction-manager"

[project.scripts]
mvcc-transaction-manager = "mvcc_transaction_manager.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.10", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/mvcc_transaction_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
